added test javascript button

--- a/static/index.html
+++ b/static/index.html
@@ -29,6 +29,10 @@
 		<div class="jumbotron">
 			<h1>Alvin Ho</h1>
 			<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
+
+			<button id="testjs" type="button" class="btn btn-primary"> Test JavaScript
+			</button>
+
 		</div>
 
 
